tests/valid_programs/fmt_strings.duck
fn main() {
    let x: String = f"";
}
