tests/errors/references/mut_throguh_imm.duck
fn main() {
    const ref = &100;
    *ref = 200;
}
